[package]
name = "hypernova"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.1", features = ["dynamic_linking"] }
rand = { version = "0.8.5", features = ["small_rng"] }
leafwing-input-manager = "0.15.0"
iyes_perf_ui = "0.3.0"
noisy_bevy = "0.7.0"

# Enable NO optimization in the dev profile.
[profile.dev]
opt-level = 0

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
